# prismo-tauri

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
assets/branding/: BRAND.md  colors.json
docs/: GUIDE.md
docs/examples/: sample-client-profile.json  sample-report-website-performance.md
src/: App.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AuditCard.tsx  ErrorBoundary.tsx  Sidebar.tsx
src/pages/: AuditRunner.tsx  ClientManager.tsx  Dashboard.tsx  ExportCenter.tsx  ReportViewer.tsx  Reports.tsx  Settings.tsx
toolkit/export/: README.md  report-style.css
toolkit/prompts/api/: api-security-audit.md
toolkit/prompts/email-dns/: email-dns-audit.md
toolkit/prompts/martech/: martech-data-quality.md  martech-stack-audit.md
toolkit/prompts/privacy/: gdpr-privacy-audit.md
toolkit/prompts/security/: system-security.md  website-security.md
toolkit/prompts/seo/: seo-competitive.md  seo-onpage.md  seo-technical.md
toolkit/prompts/social/: social-media-audit.md
toolkit/prompts/system/: linux-health.md  log-analysis.md  macos-health.md  network-diagnosis.md  windows-health.md
toolkit/prompts/web/: accessibility-audit.md  tech-stack-analysis.md  website-performance.md
